--- a/app/views/users/theme/_sidebar_menu.html.erb
+++ b/app/views/users/theme/_sidebar_menu.html.erb
@@ -17,7 +17,8 @@
         <% elsif current_user.pdpa == nil || false %>
           <%= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, pdpa_path(@user) %>
         <% else %>
-          <%= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, questionaire_path(@user) %>
+          <%= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, health_upload_path(@user) %>
+          <%#= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, questionaire_path(@user) %>
         <% end %>
 
       </li>
@@ -25,7 +26,9 @@
       <% if current_user.has_answered_quiz? %>
         <%= link_to '<i class="fa fa-folder-open"></i> Health Record'.html_safe, health_record_path(@user)%>
       <% else %>
-          <%= link_to '<i class="fa fa-folder-open"></i> Health Record'.html_safe, questionaire_path(@user)%>
+          <%= link_to '<i class="fa fa-folder-open"></i> Health Record'.html_safe, health_record_path(@user)%>
+
+          <%#= link_to '<i class="fa fa-folder-open"></i> Health Record'.html_safe, questionaire_path(@user)%>
       <% end %>
 
       </li>
@@ -34,7 +37,8 @@
         <% if current_user.has_answered_quiz? %>
           <%= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, daily_update_path(@user)%>
         <% else %>
-          <%= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, questionaire_path(@user)%>
+          <%#= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, questionaire_path(@user)%>
+            <%= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, daily_update_path(@user)%>
         <% end %>
       </li>
       <li>
