--- a/app/views/users/questionaire.html.erb
+++ b/app/views/users/questionaire.html.erb
@@ -1,3 +1,4 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
 <div class="container">
     <div class="info">
