--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -1009,9 +1009,9 @@
                             </div>
                         </div>
         <!-- end URINE -->
-        <% if @user.has_answered_quiz? == false %>
-        <%= link_to "questionaire", questionaire_path(@user) %>
-        <% end %>
+        <%# if @user.has_answered_quiz? == false %>
+        <%#= link_to "questionaire", questionaire_path(@user) %>
+        <%# end %>
     </div>
 </div>
 
