--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -2,6 +2,8 @@
     <div class="row animated bounceInLeft">
         <br>
         <div class="legend center">
+          <h5> Note : We are currently upgarding out health uploads page, for better user experience. We truly applogies for the inconvinience caused </h5>
+
             <span class=
             "label label-success value">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
             &nbsp; <span>Normal Range</span> &nbsp; &nbsp; &nbsp; <span class=
