--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -2,7 +2,7 @@
     <div class="row animated bounceInLeft">
         <br>
         <div class="legend center">
-          <h4 style="font-style:italic;margin-bottom:20px;border-style: ridge;padding:10px;border-color: red;">  Note : We are currently upgarding out health uploads page, for better user experience. We truly applogies for the inconvinience caused.</h4>
+          <!-- <h4 style="font-style:italic;margin-bottom:20px;border-style: ridge;padding:10px;border-color: red;">  Note : <%#= link_to "Health Uplods"  health_upload_path(@user)%> </h4> -->
 
             <span class=
             "label label-success value">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
