--- a/app/views/users/theme/_sidebar_menu.html.erb
+++ b/app/views/users/theme/_sidebar_menu.html.erb
@@ -12,7 +12,7 @@
 
       </li>
       <li>
-          <%= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, health_upload_path(@user) %>
+          <%#= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, health_upload_path(@user) %>
         <%# if current_user.has_answered_quiz?  %>
           <%#= link_to '<i class="fa fa-upload"></i> Health Upload'.html_safe, health_upload_path(@user) %>
         <%# elsif current_user.pdpa == nil || false %>
@@ -34,14 +34,14 @@
 
       </li>
 
-      <li>
-        <% if current_user.has_answered_quiz? %>
-          <%= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, daily_update_path(@user)%>
-        <% else %>
+      <!-- <li> -->
+        <%# if current_user.has_answered_quiz? %>
+          <%#= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, daily_update_path(@user)%>
+        <%# else %>
           <%#= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, questionaire_path(@user)%>
-            <%= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, daily_update_path(@user)%>
-        <% end %>
-      </li>
+            <%#= link_to '<i class="fa fa-pencil-square-o"></i> Health Diary'.html_safe, daily_update_path(@user)%>
+        <%# end %>
+      <!-- </li> -->
       <li>
         <a><i class="fa fa-user"></i> Account <span class="fa fa-chevron-down"></span></a>
         <ul class="nav child_menu" style="display: none;">
